use cucumber-jvm-parallel-plugin to run in parallel.